[Modify]add migrate table
